projects/vb6parse/snapshots/tests/library/datetime/day/day_basic.snap
---
source: projects/vb6parse/tests/library/datetime/day.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: d
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: Day
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: LiteralExpression
                      children:
                        - kind: DateLiteral
                          text: "#1/15/2025#"
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
